--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+/* tailwind config */
+@use './tailwind.css';
+
+/* Custom Layout */
+@use './assets/themes/layout.scss';
+
+/* PrimeIcons last */
+@use 'primeicons/primeicons.css';
