--- a/src/app/view/about/about.component.html
+++ b/src/app/view/about/about.component.html
@@ -1,4 +1,12 @@
-<app-elevated-card></app-elevated-card>
+<app-elevated-card
+  [image2]="elevatedCardInfo.image2"
+  [buttonTitle]="elevatedCardInfo.buttonTitle"
+  [title]="elevatedCardInfo.title"
+  [description]="elevatedCardInfo.description"
+></app-elevated-card>
+
+<!-- flags -->
+<app-flags></app-flags>
 
 <!-- about pluz group -->
 <app-about-pluz-group
