added product table and contact page fix

--- a/src/app/shared/components/layout/page-layout/page-layout.component.html
+++ b/src/app/shared/components/layout/page-layout/page-layout.component.html
@@ -2,7 +2,7 @@
   <section class="relative min-h-1/2 w-full">
     <!-- Background Image -->
     <div
-      class="pointer-events-none absolute inset-0 bg-cover bg-fixed bg-center"
+      class="pointer-events-none absolute inset-0 bg-cover bg-fixed bg-center bg-no-repeat"
       [ngStyle]="{ 'background-image': 'url(' + imageUrl + ')' }"
     ></div>
 
