--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!-- Top Bar -->
 <div class="border-b border-gray-200 bg-white">
-  <div class="w-full p-4">
-    <div class="flex items-center justify-between">
+  <div class="w-full px-4 py-2">
+    <div class="flex items-center justify-around gap-8">
       <!-- Left: Email -->
       <div class="flex items-center gap-2 text-gray-700">
         <i class="pi pi-envelope" style="color: #708090"></i>
@@ -46,22 +46,22 @@
       <!-- Logo -->
       <div class="shrink-0">
         <a routerLink="/" class="block">
-          <img src="assets/img/logo.png" alt="PLUZ GROUP" class="h-10" />
+          <img src="assets/img/logo.png" alt="PLUZ GROUP" class="h-15" />
         </a>
       </div>
 
       <!-- Search Bar -->
-      <div class="max-w-2xl flex-1">
+      <div class="max-w-lg flex-1">
         <div class="relative">
           <input
             type="text"
             [(ngModel)]="searchQuery"
             placeholder="Search hydraulic tools, pumps, cylinders..."
-            class="w-full rounded-full border border-gray-300 px-6 py-2 pr-14 focus:border-transparent focus:ring-2 focus:ring-green-600 focus:outline-none"
+            class="w-full rounded-2xl border border-gray-300 px-6 py-2 pr-14 focus:border-transparent focus:ring-2 focus:ring-green-600 focus:outline-none"
           />
           <button
             (click)="onSearch()"
-            class="bg-green-custom hover:bg-green-custom absolute top-0 right-0 h-full rounded-r-full px-6 text-white transition-colors"
+            class="bg-green-custom hover:bg-green-custom absolute top-0 right-0 h-full rounded-r-2xl px-6 text-white transition-colors"
           >
             <i class="pi pi-search"></i>
           </button>
@@ -82,10 +82,19 @@
 
 <!-- Navigation Menu -->
 <nav class="bg-gray-custom relative block text-white">
+  @if (blur) {
+    <div class="fixed top-[17%] z-1 h-screen w-screen backdrop-blur-sm"></div>
+  }
   <div class="container mx-auto px-4">
-    <ul class="group flex items-center justify-center gap-0 py-2">
+    <ul class="flex items-center justify-center gap-0 py-2">
       @for (item of routesLinks; let i = $index; track $index) {
-        <li class="group flex-1 text-center" (mouseenter)="setActiveMenu(i)" [class]="'item-' + i">
+        <li
+          class="flex-1 text-center"
+          (mouseenter)="setActiveMenu(i)"
+          (mouseleave)="clearActiveMenu()"
+          [class]="'item-' + i"
+          [class]="item.label == 'Products' ? 'group' : ''"
+        >
           <a
             [routerLink]="item.path"
             routerLinkActive="nav-active"
@@ -95,18 +104,18 @@
             {{ item.label }}
           </a>
           <!-- The Dropdown Div with Blur Effect -->
+
           <div
             (mouseleave)="clearActiveMenu()"
             (mouseenter)="setActiveMenu(i)"
-            class="animate-slideDown group-hover:translate-y-12% bg-gray-custom/80 pointer-events-none fixed left-0 z-2 flex h-1/3 w-screen translate-y-0 justify-around p-6 pt-24 opacity-0 shadow-lg backdrop-blur-sm transition-all duration-300 ease-in-out group-hover:pointer-events-auto group-hover:opacity-100"
+            class="animate-slideDown group-hover:translate-y-15% bg-gray-custom/90 pointer-events-none fixed left-0 z-2 flex h-1/3 w-screen translate-y-0 justify-around p-6 pt-24 opacity-0 shadow-lg transition-all duration-300 ease-in-out group-hover:pointer-events-auto group-hover:opacity-100"
           >
-            <div class="mx-auto grid max-w-6xl grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-3">
-              <ul
-                *ngFor="let col of splitIntoColumns(routesLinks[0].extraInfo, 3)"
-                class="list-disc pl-6"
-              >
+            <div class="mx-auto grid max-w-6xl grid-cols-1 gap-10 lg:grid-cols-2">
+              <ul *ngFor="let col of splitIntoColumns(2, item.extraInfo)" class="list-disc pl-6">
                 <li *ngFor="let item of col" class="text-left text-sm">
-                  {{ item }}
+                  <h1 class="text-xl leading-relaxed">
+                    {{ item.label }}
+                  </h1>
                 </li>
               </ul>
             </div>
